--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="vendor/nouislider/nouislider.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -30,7 +31,7 @@
       <section class="img-upload">
         <div class="img-upload__wrapper">
           <h2 class="img-upload__title  visually-hidden">Загрузка фотографии</h2>
-          <form class="img-upload__form" id="upload-select-image" method="post" enctype="multipart/form-data" autocomplete="off">
+          <form class="img-upload__form" id="upload-select-image" method="post" action="https://28.javascript.pages.academy/kekstagram" enctype="multipart/form-data" autocomplete="off">
 
             <!-- Изначальное состояние поля для загрузки изображения -->
             <fieldset class="img-upload__start">
@@ -52,7 +53,9 @@
 
                   <!-- Предварительный просмотр изображения -->
                   <div class="img-upload__preview">
-                    <img src="img/upload-default-image.jpg" alt="Предварительный просмотр фотографии">
+                    <img src="img/upload-default-image.jpg" 
+                    alt="Предварительный просмотр фотографии">
+
                   </div>
 
                   <!-- Изменение глубины эффекта, накладываемого на изображение -->
@@ -115,11 +118,27 @@
 
                 <!-- Добавление хэш-тегов и комментария к изображению -->
                 <fieldset class="img-upload__text text">
-                  <div class="img-upload__field-wrapper">
-                    <input class="text__hashtags" name="hashtags" placeholder="#ХэшТег">
+                  <div class="img-upload__element">
+                    <input
+                     class="text__hashtags"
+                     name="hashtags" 
+                     placeholder="#ХэшТег">
+                     minlength="2"
+                     maxlength="20"
+                     data-pristine-minlength-message="Хэштег не может быть короче 2 символов"
+                     data-pristine-maxlength-message="Хэштег не может быть длиннее 20 символов"
+                    >
                   </div>
-                  <div class="img-upload__field-wrapper">
-                    <textarea class="text__description" name="description" placeholder="Ваш комментарий..."></textarea>
+                  <div class="img-upload__element">
+                    <textarea
+                    class="text__description"
+                    name="description" 
+                    placeholder="Ваш комментарий..."
+                    minlength="2"
+                    maxlength="140"
+                    data-pristine-minlength-message="Комментарий не может быть короче 2 символов"
+                    data-pristine-maxlength-message="Комментарий не может быть длиннее 140 символов"
+                    ></textarea>
                   </div>
                 </fieldset>
 
@@ -231,7 +250,10 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-  <script src="./js/main.js" type="module"></script>
+
+  <script src="vendor/pristine/pristine.min.js"></script>
+  <script src="vendor/nouislider/nouislider.js"></script>
+  <script src="js/main.js" type="module"></script>
   
 </body>
 </html>
